--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,6 +1,2 @@
-FROM ubuntu:18.04
-RUN apt-get update -y
-RUN apt-get install -y curl
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash
-RUN apt-get install -y nodejs
-RUN apt-get install -y python-pip python-dev build-essential
+FROM node:6-alpine
+RUN apk add --update python
