--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
     stages {
         stage('Build') { 
             steps {
-                sh 'chmod 777 ./jenkins/scripts/kill.sh'
-                sh './jenkins/scripts/kill.sh'
+                // sh 'chmod 777 ./jenkins/scripts/kill.sh'
+                // sh './jenkins/scripts/kill.sh'
                 sh 'npm install' 
             }
         }
