--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,6 +11,7 @@ pipeline {
     stages {
         stage('Build') { 
             steps {
+                sh './jenkins/scripts/kill.sh'
                 sh 'npm install' 
             }
         }
@@ -25,8 +26,8 @@ pipeline {
                 sh 'chmod 777 ./jenkins/scripts/deliver.sh'
                 sh 'chmod 777 ./jenkins/scripts/kill.sh'
                 sh './jenkins/scripts/deliver.sh'
-                input message: 'Finished using the web site? (Click "Proceed" to continue)'
-                sh './jenkins/scripts/kill.sh'
+                // input message: 'Finished using the web site? (Click "Proceed" to continue)'
+                // sh './jenkins/scripts/kill.sh'
             }
         }
     }
