--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "chance": "^1.0.18",
