--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.7.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "d3": "^5.9.2",
+    "decimal.js": "^10.2.0",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
