--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ PORT=3006
 # BackEnd
 REACT_APP_BAAS_BACKEND_URL=http://10.40.111.60:8000/
 REACT_APP_BAAS_SOCKET=http://10.40.111.60:3000
+REACT_APP_BAAS_AUTH_BACKEND_URL=http://localhost:3000/
