--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
+    "availity-reactstrap-validation": "^2.6.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "chance": "^1.0.18",
