--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ NODE_PATH=src/
 PORT=3006
 
 # BackEnd
-REACT_APP_BAAS_BACKEND_URL=http://10.40.111.60:8000/
-REACT_APP_BAAS_SOCKET=http://10.40.111.60:3000
-REACT_APP_BAAS_AUTH_BACKEND_URL=http://localhost:3000/
+# REACT_APP_BAAS_BACKEND_URL=http://10.40.111.56:16208/
+# REACT_APP_BAAS_SOCKET=http://10.40.111.56:16230
+REACT_APP_BAAS_BACKEND_URL=http://localhost:8000/
+REACT_APP_BAAS_SOCKET=http://10.40.111.56:16130
+REACT_APP_BAAS_AUTH_BACKEND_URL=http://localhost:3002/
