--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux-actions": "^2.6.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "rxjs": "^6.5.3",
     "socket.io-client": "^2.2.0",
     "sweetalert2": "^8.10.7",
     "url-pattern": "^1.0.3"
