--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "owasp-password-strength-test": "^1.3.0",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.1.3",
     "react-bootstrap": "^1.0.0-beta.5",
